--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <header>
-      <h1>Swaggadelic Employee Directory</h1>
+      <div class="head">
+        <h1>Swaggadelic Employee Directory</h1>
+      </div> <!-- closing tag for head -->
     </header>
     <main class="grid-container">
       <div class="card">
