Work on the modal overlay, changed the grid-template-columns a bit

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="modal-content">
       <!-- modal info will be added by JS here -->
       <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
+      <div class="modal-text-container">
         <h2 class="name">Yodata Midaza</h2>
         <p class="email">crazy82star@hotkale.com</p>
         <p class="address">Saigon</p>
