Begin testing the layout bringing in information from the API. Added margin-bottom to the grid-container.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       </div> <!-- closing tag for head -->
     </header>
     <main class="grid-container">
-      <div class="card">
+      <!-- <div class="card">
         <img class="avatar" src="member-3.jpg" />
       <div class="text-container">
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container -->
+      <!--  </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -31,8 +31,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -40,8 +40,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -49,8 +49,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container -->
+      <!-- </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -58,8 +58,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -67,8 +67,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -76,8 +76,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -85,8 +85,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -94,8 +94,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -103,8 +103,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -112,8 +112,8 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card
 
       <div class="card">
         <img class="avatar" src="member-3.jpg" />
@@ -121,28 +121,28 @@
         <h2 class="name">Madusa Shabati</h2>
         <p class="email">iamcool@damniknow.com</p>
         <p class="address">Boston</p>
-      </div> <!-- closing tag for text-container -->
-      </div> <!-- closing tag for card -->
+      </div> closing tag for text-container
+      </div> closing tag for card -->
     </main>
 <div class="overlay hidden">
   <div class="modal">
     <button class="modal-close">X</button>
     <div class="modal-content">
       <!-- modal info will be added by JS here -->
-      <img class="avatar" src="member-3.jpg" />
       <div class="modal-text-container">
+      <!-- <img class="avatar" src="member-3.jpg" />
         <h2 class="name">Yodata Midaza</h2>
         <p class="email">crazy82star@hotkale.com</p>
         <p class="address">Saigon</p>
         <hr />
         <p>(592) 068-3920</p>
         <p class="address">124 Yo Momma Drive, NY 300010</p>
-        <p>Birthday: 02/03/49</p>
-      </div> <!-- closing tag for text-container -->
+        <p>Birthday: 02/03/49</p> -->
+      </div> <!-- closing tag for modal-text-container -->
     </div> <!-- closing tag for modal-content -->
   </div> <!-- closing tag for modal -->
 </div> <!-- closing tag for overlay hidden -->
     
-<!-- <script src="main.js"></script> -->
+<script src="main.js"></script>
   </body>
 </html>
