Move modal window up and add darker background behind the modal. Beginning to add search function in main.js, search box on the top right of the directory.

--- a/index.html
+++ b/index.html
@@ -13,134 +13,26 @@
     <header>
       <div class="head">
         <h1>Swaggadelic Employee Directory</h1>
+        <div class="search">
+          <input class="searchField" type="search" placeholder="Search by Name" />
+        </div> <!-- closing tag for search -->
       </div> <!-- closing tag for head -->
     </header>
     <main class="grid-container">
-      <!-- <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container -->
-      <!--  </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container -->
-      <!-- </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card
-
-      <div class="card">
-        <img class="avatar" src="member-3.jpg" />
-      <div class="text-container">
-        <h2 class="name">Madusa Shabati</h2>
-        <p class="email">iamcool@damniknow.com</p>
-        <p class="address">Boston</p>
-      </div> closing tag for text-container
-      </div> closing tag for card -->
+      <!-- JS will insert the data here! -->
     </main>
 <div class="overlay hidden">
+  <div class="darkbg">
   <div class="modal">
     <button class="modal-close">X</button>
     <div class="modal-content">
       <!-- modal info will be added by JS here -->
       <div class="modal-text-container">
-      <!-- <img class="avatar" src="member-3.jpg" />
-        <h2 class="name">Yodata Midaza</h2>
-        <p class="email">crazy82star@hotkale.com</p>
-        <p class="address">Saigon</p>
-        <hr />
-        <p>(592) 068-3920</p>
-        <p class="address">124 Yo Momma Drive, NY 300010</p>
-        <p>Birthday: 02/03/49</p> -->
+      <!-- again JS adds this in -->
       </div> <!-- closing tag for modal-text-container -->
     </div> <!-- closing tag for modal-content -->
   </div> <!-- closing tag for modal -->
+</div> <!-- closing tag for darkbg -->
 </div> <!-- closing tag for overlay hidden -->
     
 <script src="main.js"></script>
